exports[`MenuItem component renders menu item with no image 1`] = `
<a
  onClick={[Function]}
  style={Object {}}>
  
  title
</a>
`;

exports[`MenuItem component renders menu item with title 1`] = `
<a
  onClick={[Function]}
  style={Object {}}>
  <img
    alt="type"
    src="/images/{props.imageType}.svg" />
  title
</a>
`;
